# wasm-concurrency-analysis

./: Cargo.toml  README.md  index.html  index.js  run.sh  server.py  worker.js
docs/: .gitignore  Wasabi-Extension.md  WebAssembly-Overview.md  WebAssembly-Relevant-Extensions.md  WebAssembly-TLS-and-Linking.md  WebAssembly-Threads.md  graphics.drawio
examples/atomic-tracked-deadlock/: analysis.js
examples/atomic-tracked-deadlock/pkg/: playground_bg.wasabi.js  playground_bg.wasm
examples/instrumented-deadlock/: worker.js
examples/instrumented-deadlock/pkg/: analysis.js  playground.d.ts  playground.js  playground_bg.wasabi.js  playground_bg.wasm  playground_bg.wasm.d.ts
examples/raw-pointers/: Cargo.toml  README.md  rust-toolchain.toml
examples/raw-pointers/src/: lib.rs
examples/static-variables/: Cargo.toml  README.md
examples/static-variables/src/: lib.rs
mutex-test/: Cargo.toml  index.html
mutex-test/src/: lib.rs
parallel-test/: Cargo.toml  build.py  index.html  index.js  run.py  worker.js
parallel-test/src/: lib.rs  pool.rs
playground/: Cargo.toml  README.md  index.html  index.js  playground.wasabi.js  poolworker.js  worker.js
playground/src/: lib.rs  spawner.rs  threadpool.rs
