[package]
name = "parallel-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures-channel = "0.3.31"
js-sys = "0.3.72"
rayon = "1.10.0"
rayon-core = "1.12.1"
raytracer = { git = 'https://github.com/alexcrichton/raytracer', branch = 'update-deps' }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = {version = "0.3.72", features = ['CanvasRenderingContext2d', 'ErrorEvent', 'Event', 'ImageData', 'Navigator', 'Window', 'Worker', 'DedicatedWorkerGlobalScope', 'MessageEvent',]}
