[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["DedicatedWorkerGlobalScope", "ErrorEvent", "Event", "MessageEvent", "Worker"] }
wasm-ca-rs = { git = "https://github.com/AFKoffee/wasm-ca-rs.git", features = ["wbg"]} 
